@@ -2,9 +2,11 @@ DIST libwww-perl-5.805.tar.gz 237535 RMD160 ddb124b5eeec525588d3b338f4b28c703a7d
 DIST libwww-perl-5.826.tar.gz 252196 RMD160 9e34c1d2ffdfe7ad995c07ce587c0a8b177c4f06 SHA1 0c6ba0a37ac82f170fe6d5e0092331f90937672b SHA256 67c3d7e332184a7d7649de1e65b73933608cd861c3a382dadb7aa4d25652322d
 DIST libwww-perl-5.827.tar.gz 264226 RMD160 740ac20983eafff7110e0a805dfa14f122b86f6a SHA1 8a2c6587713e40a171526c3fdc2c87d32c184ebb SHA256 08f68dcfc3ff7319e4ccc08f7e7bbb62cb9874ef819d3dea9eb788ddd41887d8
 DIST libwww-perl-5.828.tar.gz 264529 RMD160 8b784473d7eee8cfac1e9724a9898f72b7a32132 SHA1 3278881c130156d243779bd8e037e4cb8516a28b SHA256 6534a6abf1c28cbe26f787e0ca3eb590132bba2c234919e8554fb69073831f01
+DIST libwww-perl-5.829.tar.gz 265706 RMD160 4d6fdd8ead4feae6f33a0c6abca2a0573dcd1e37 SHA1 d5533f0c538cacd6c5482a416494e896bfe517fe SHA256 9c851d41888f853afb69696254bb6eb5f0a0ea510125ed8cd4defff4ee98f535
 EBUILD libwww-perl-5.805.ebuild 1333 RMD160 fb79795c9c8cf1d39131e74904f5a9ce16103ae1 SHA1 f86ab774f65ba9c523e909b23e2e7766be2db2a4 SHA256 47dd0f1b74fe091381d09c3fdc0851e6f3fc00b3fcc41f5dc97e025673e69c10
 EBUILD libwww-perl-5.826.ebuild 1185 RMD160 b8601ed9639e0ee8ac503d52dfaa232ff53b09fa SHA1 e233d4649214e6a45ed560abd1a66118248e2d6a SHA256 65a4c1e7efcc46c7592eb2fad417831cd0983174c2df32404a5f6a7d74dc8dfd
 EBUILD libwww-perl-5.827.ebuild 1185 RMD160 6e838b2508bbd9900d25f5c346c1bc7f1f4c7043 SHA1 5d8a1cb77a16ad762c033a53888a97b1bcbb965c SHA256 80a51560b4a35be9bb6d5250fbfa2d02f7dc59759ae0be3c653996d0bedaf11c
 EBUILD libwww-perl-5.828.ebuild 1185 RMD160 810189f84b5c2b2afd99a0c144c499ab91d4d1b8 SHA1 10ca94cbf049f4f7288045b2fe4ac23f1b0c39ed SHA256 e6b6421b415963cbaf115acb64dbd4caf9731d77c4f71d9048a3e53c2a8b7c8f
-MISC ChangeLog 14302 RMD160 4dbf470d9318cb362d6bff890e82f82377c1acd9 SHA1 64bdf9001c48ff70ef15298583c380909f2ad605 SHA256 7e39447892e70618c91bf9d45d9472b83ce7dacd25199b5d97e8a91f931843c9
+EBUILD libwww-perl-5.829.ebuild 1185 RMD160 6451aadc85a75a76265ad67df80dbb0d5cb9bfcc SHA1 96a391300e9afde02ba6eaba75edea17c6042b2f SHA256 1f877b220e27ac1025c8608efe85abb55bddb0b0baca4cdffe840e5ab1a24529
+MISC ChangeLog 14427 RMD160 f4afbed6b29d0c7cc0c97739079c3510236167ec SHA1 fcae5d601f631062b89fd2b1cfd56773c2ca126b SHA256 8f253a5af1c3e5551f910e6be1b513c332721b3f5e9753c70b1304dcfda0233c
 MISC metadata.xml 305 RMD160 647980838c590f54441a053916ea629e53e551c0 SHA1 99ef1deeae9a934fb6e46cf5fc4a5fcb8379a74a SHA256 f05dbef15061919972882cab07057e102760a542beba17d131194091401cd7ca
