@@ -1,6 +1,11 @@
 # ChangeLog for dev-perl/libwww-perl
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/libwww-perl/ChangeLog,v 1.105 2009/06/26 06:16:24 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/libwww-perl/ChangeLog,v 1.106 2009/07/09 07:05:05 tove Exp $
+
+*libwww-perl-5.829 (09 Jul 2009)
+
+  09 Jul 2009; Torsten Veller <tove@gentoo.org> +libwww-perl-5.829.ebuild:
+  Version bump
 
 *libwww-perl-5.828 (26 Jun 2009)
 
